Fix for OPENAM-411
git-svn-id: https://svn.forgerock.org/openam/trunk@1117 0f4defcf-c51a-4c67-9f44-6fb5eba73c5d