@@ -27,7 +27,7 @@
  */
 
 /*
- * Portions Copyrighted [2011] [ForgeRock AS]
+ * Portions Copyrighted 2011 ForgeRock AS
  */
 package com.sun.identity.authentication.spi;
 
@@ -40,7 +40,7 @@ import com.sun.identity.idm.AMIdentity;
 import com.sun.identity.idm.IdRepoException;
 import com.sun.identity.idm.IdUtils;
 import com.sun.identity.shared.debug.Debug;
-import java.io.IOException;
+import com.sun.identity.shared.encode.Base64;
 import java.security.NoSuchAlgorithmException;
 import java.security.InvalidKeyException;
 import java.util.Iterator;
@@ -54,8 +54,6 @@ import javax.crypto.spec.SecretKeySpec;
 import javax.servlet.http.HttpServletRequest;
 import javax.servlet.http.HttpServletResponse;
 import javax.servlet.http.Cookie;
-import sun.misc.BASE64Encoder;
-import sun.misc.BASE64Decoder;
 
 
 /**
@@ -131,8 +129,7 @@ public class ReplayPasswd implements AMPostAuthProcessInterface {
             SystemProperties.get(SHAREPOINT_LOGIN_ATTR_NAME);
 
         try {
-            BASE64Decoder decoder = new BASE64Decoder();
-            byte[] desKey = decoder.decodeBuffer(deskeystr);
+            byte[] desKey = Base64.decode(deskeystr);
             
             SecretKeySpec keySpec = new SecretKeySpec(desKey, "DES");
 
@@ -144,8 +141,7 @@ public class ReplayPasswd implements AMPostAuthProcessInterface {
                              userpasswd.length());
             byte[] ciphertext = cipher.doFinal(data);
 			
-            BASE64Encoder encoder = new BASE64Encoder();
-            String encodedpasswd = encoder.encodeBuffer(ciphertext);                
+            String encodedpasswd = Base64.encode(ciphertext);
             if (encodedpasswd != null) {
                ssoToken.setProperty(SUN_IDENTITY_USER_PASSWORD, encodedpasswd);
             }
@@ -188,9 +184,6 @@ public class ReplayPasswd implements AMPostAuthProcessInterface {
         } catch (IdRepoException ire) {
             debug.error("ReplayPasswd.onLoginSuccess: IOException while " +
                 "fetching user attributes: " + ire);
-        } catch (IOException ioe) {
-            debug.error("ReplayPasswd.onLoginSuccess: IOException while " +
-                "setting session password property: " + ioe);
         } catch (NoSuchAlgorithmException noe) {
             debug.error("ReplayPasswd.onLoginSuccess: NoSuchAlgorithmException"+
                 " while setting session password property: " + noe);
